--- a/index.html
+++ b/index.html
@@ -2,9 +2,33 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leaderbets.bet - Meilleurs Codes Promo & Bonus Bookmakers</title>
+    <meta name="description" content="Découvrez les meilleurs codes promo et bonus des bookmakers. Leaderbets.bet vous offre des analyses, pronostics et guides pour optimiser vos paris sportifs." />
+    <meta name="keywords" content="paris sportifs, codes promo, bonus, bookmakers, pronostics, guides, leaderbets">
+    <meta name="author" content="Leaderbets">
+    <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.leaderbets.bet/">
+    <meta property="og:title" content="Leaderbets.bet - Meilleurs Codes Promo & Bonus Bookmakers">
+    <meta property="og:description" content="Découvrez les meilleurs codes promo et bonus des bookmakers. Leaderbets.bet vous offre des analyses, pronostics et guides pour optimiser vos paris sportifs.">
+    <meta property="og:image" content="https://www.leaderbets.bet/logo.png">
+    <meta property="og:site_name" content="Leaderbets.bet">
+
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.leaderbets.bet/">
+    <meta property="twitter:title" content="Leaderbets.bet - Meilleurs Codes Promo & Bonus Bookmakers">
+    <meta property="twitter:description" content="Découvrez les meilleurs codes promo et bonus des bookmakers. Leaderbets.bet vous offre des analyses, pronostics et guides pour optimiser vos paris sportifs.">
+    <meta property="twitter:image" content="https://www.leaderbets.bet/logo.png">
+
+    <link rel="canonical" href="https://www.leaderbets.bet/" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -19,6 +43,28 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0"
+  }
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "url": "https://www.leaderbets.bet/",
+  "name": "Leaderbets.bet",
+  "description": "Découvrez les meilleurs codes promo et bonus des bookmakers. Leaderbets.bet vous offre des analyses, pronostics et guides pour optimiser vos paris sportifs.",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Leaderbets",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://www.leaderbets.bet/logo.png"
+    }
+  },
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://www.leaderbets.bet/search?q={search_term_string}",
+    "query-input": "required name=search_term_string"
   }
 }
 </script>
